update environment.yaml and pre-commit hook

--- a/exercises/synthetic-valley/SV_flopy.ipynb
+++ b/exercises/synthetic-valley/SV_flopy.ipynb
@@ -111,7 +111,7 @@
     "clay_index = np.ones(shape2d, dtype=int)\n",
     "clay_index[pass_through_idx] = -1\n",
     "idomain[2, :, :] = clay_index\n",
-    "idomain = [1, 1, idomain[2, :, :], 1, 1]\n"
+    "idomain = [1, 1, idomain[2, :, :], 1, 1]"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "delr = delc = 500."
+    "delr = delc = 500.0"
    ]
   },
   {
@@ -383,7 +383,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "river_spd = [(0, i + 22, 8, float(stage[i]), 1e5, float(stage[i]) - 1., riv_bndname[i]) for i in range(nriv)]\n",
+    "river_spd = [\n",
+    "    (0, i + 22, 8, float(stage[i]), 1e5, float(stage[i]) - 1.0, riv_bndname[i])\n",
+    "    for i in range(nriv)\n",
+    "]\n",
     "river_spd"
    ]
   },
@@ -405,17 +408,17 @@
     "def get_well_rates(i, j, Q, well_name, k0=3, k1=4):\n",
     "    T = 0.0\n",
     "    T_k = []\n",
-    "    for k in range(k0, k1+1):\n",
+    "    for k in range(k0, k1 + 1):\n",
     "        value = float(transmissitivty[k, i, j])\n",
     "        T += value\n",
     "        T_k.append(value)\n",
     "    rates = []\n",
     "    idx = 0\n",
-    "    for k in range(k0, k1+1):\n",
+    "    for k in range(k0, k1 + 1):\n",
     "        frac = T_k[idx] / T\n",
     "        rates.append(((k, i, j), frac * Q, well_name))\n",
     "        idx += 1\n",
-    "    return rates\n"
+    "    return rates"
    ]
   },
   {
@@ -451,10 +454,10 @@
     "for n, values in well_spd_base.items():\n",
     "    rates = []\n",
     "    for _, i, j, Q, well_name in values:\n",
-    "        rates +=get_well_rates(i, j, Q, well_name)\n",
+    "        rates += get_well_rates(i, j, Q, well_name)\n",
     "    well_spd[n] = rates\n",
     "\n",
-    "well_spd\n"
+    "well_spd"
    ]
   },
   {
@@ -473,9 +476,7 @@
    "outputs": [],
    "source": [
     "drn_spd = {\n",
-    "    3: [\n",
-    "        (0, 22, 19, 2.0, 4e6)\n",
-    "    ],\n",
+    "    3: [(0, 22, 19, 2.0, 4e6)],\n",
     "}"
    ]
   },
@@ -533,10 +534,23 @@
    "outputs": [],
    "source": [
     "well_depth = [\n",
-    "    -200.74, -100.00, -100.00, -100.00, -224.62, \n",
-    "    -100.00, -100.00, -100.00, -100.00, -100.00,\n",
-    "    -100.00, -100.00, -100.00, -100.00, -233.22,\n",
-    "    -100.00, -100.00,\n",
+    "    -200.74,\n",
+    "    -100.00,\n",
+    "    -100.00,\n",
+    "    -100.00,\n",
+    "    -224.62,\n",
+    "    -100.00,\n",
+    "    -100.00,\n",
+    "    -100.00,\n",
+    "    -100.00,\n",
+    "    -100.00,\n",
+    "    -100.00,\n",
+    "    -100.00,\n",
+    "    -100.00,\n",
+    "    -100.00,\n",
+    "    -233.22,\n",
+    "    -100.00,\n",
+    "    -100.00,\n",
     "]"
    ]
   },
@@ -626,7 +640,9 @@
    "outputs": [],
    "source": [
     "obs_loc = {}\n",
-    "obs_loc[f\"{name}.gwf.wt.csv\"] = [(f\"WT{idx + 1: 02d}\", \"HEAD\", (0, i, j)) for idx, (i, j) in enumerate(obs_rc_locs)]"
+    "obs_loc[f\"{name}.gwf.wt.csv\"] = [\n",
+    "    (f\"WT{idx + 1: 02d}\", \"HEAD\", (0, i, j)) for idx, (i, j) in enumerate(obs_rc_locs)\n",
+    "]"
    ]
   },
   {
@@ -636,7 +652,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs_loc[f\"{name}.gwf.aq.csv\"] = [(f\"AQ{idx + 1: 02d}\", \"HEAD\", (aq_layer[idx], i, j)) for idx, (i, j) in enumerate(obs_rc_locs)]"
+    "obs_loc[f\"{name}.gwf.aq.csv\"] = [\n",
+    "    (f\"AQ{idx + 1: 02d}\", \"HEAD\", (aq_layer[idx], i, j))\n",
+    "    for idx, (i, j) in enumerate(obs_rc_locs)\n",
+    "]"
    ]
   },
   {
@@ -653,7 +672,7 @@
     "    (\"V1\", \"HEAD\", (4, 34, 15)),\n",
     "    (\"V2\", \"HEAD\", (4, 32, 5)),\n",
     "    (\"DW\", \"HEAD\", (0, 22, 19)),\n",
-    "]\n"
+    "]"
    ]
   },
   {
@@ -701,7 +720,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ims = flopy.mf6.ModflowIms(sim, complexity=\"simple\", outer_maximum=200, inner_maximum=100, outer_dvclose=1e-5, inner_dvclose=1e-6)"
+    "ims = flopy.mf6.ModflowIms(\n",
+    "    sim,\n",
+    "    complexity=\"simple\",\n",
+    "    outer_maximum=200,\n",
+    "    inner_maximum=100,\n",
+    "    outer_dvclose=1e-5,\n",
+    "    inner_dvclose=1e-6,\n",
+    ")"
    ]
   },
   {
@@ -722,17 +748,17 @@
    "outputs": [],
    "source": [
     "dis = flopy.mf6.ModflowGwfdis(\n",
-    "    gwf, \n",
-    "    length_units=\"FEET\", \n",
-    "    nlay=nlay, \n",
-    "    nrow=nrow, \n",
-    "    ncol=ncol, \n",
-    "    delr=delr, \n",
-    "    delc=delc, \n",
+    "    gwf,\n",
+    "    length_units=\"FEET\",\n",
+    "    nlay=nlay,\n",
+    "    nrow=nrow,\n",
+    "    ncol=ncol,\n",
+    "    delr=delr,\n",
+    "    delc=delc,\n",
     "    top=top,\n",
     "    botm=botm,\n",
     "    idomain=idomain,\n",
-    "    )"
+    ")"
    ]
   },
   {
@@ -782,12 +808,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "riv = flopy.mf6.ModflowGwfriv(gwf, boundnames=True, \n",
-    "                              print_flows=True, \n",
-    "                              maxbound=nriv, \n",
-    "                              stress_period_data=river_spd, \n",
-    "                              observations=riv_obs\n",
-    "                             )"
+    "riv = flopy.mf6.ModflowGwfriv(\n",
+    "    gwf,\n",
+    "    boundnames=True,\n",
+    "    print_flows=True,\n",
+    "    maxbound=nriv,\n",
+    "    stress_period_data=river_spd,\n",
+    "    observations=riv_obs,\n",
+    ")"
    ]
   },
   {
@@ -797,7 +825,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wel = flopy.mf6.ModflowGwfwel(gwf, boundnames=True, stress_period_data=well_spd, maxbound=4, pname=\"pwell\")"
+    "wel = flopy.mf6.ModflowGwfwel(\n",
+    "    gwf, boundnames=True, stress_period_data=well_spd, maxbound=4, pname=\"pwell\"\n",
+    ")"
    ]
   },
   {
@@ -807,7 +837,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "drn = flopy.mf6.ModflowGwfdrn(gwf, stress_period_data=drn_spd, maxbound=1, pname=\"dewater\")"
+    "drn = flopy.mf6.ModflowGwfdrn(\n",
+    "    gwf, stress_period_data=drn_spd, maxbound=1, pname=\"dewater\"\n",
+    ")"
    ]
   },
   {
@@ -935,7 +967,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "levels = np.arange(2, 20., 2)"
+    "levels = np.arange(2, 20.0, 2)"
    ]
   },
   {
@@ -1054,7 +1086,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Water Table Statistics\\nMean Error: {resid_wt.mean()} ft.\\nRMSE:       {np.sqrt((resid_wt**2).sum()) / resid_wt.shape[0]} ft.\")"
+    "print(\n",
+    "    f\"Water Table Statistics\\nMean Error: {resid_wt.mean()} ft.\\nRMSE:       {np.sqrt((resid_wt**2).sum()) / resid_wt.shape[0]} ft.\"\n",
+    ")"
    ]
   },
   {
@@ -1064,7 +1098,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Lower Aquifer Statistics\\nMean Error: {resid_aq.mean()} ft.\\nRMSE:       {np.sqrt((resid_aq**2).sum()) / resid_aq.shape[0]} ft.\")"
+    "print(\n",
+    "    f\"Lower Aquifer Statistics\\nMean Error: {resid_aq.mean()} ft.\\nRMSE:       {np.sqrt((resid_aq**2).sum()) / resid_aq.shape[0]} ft.\"\n",
+    ")"
    ]
   },
   {
@@ -1074,7 +1110,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Global Statistics\\nMean Error: {resid_gb.mean()} ft.\\nRMSE:       {np.sqrt((resid_gb**2).sum()) / resid_gb.shape[0]} ft.\")"
+    "print(\n",
+    "    f\"Global Statistics\\nMean Error: {resid_gb.mean()} ft.\\nRMSE:       {np.sqrt((resid_gb**2).sum()) / resid_gb.shape[0]} ft.\"\n",
+    ")"
    ]
   },
   {
@@ -1092,7 +1130,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xy = [(float(gwf.modelgrid.xcellcenters[i, j]), float(gwf.modelgrid.ycellcenters[i, j])) for i, j in obs_rc_locs]"
+    "xy = [\n",
+    "    (float(gwf.modelgrid.xcellcenters[i, j]), float(gwf.modelgrid.ycellcenters[i, j]))\n",
+    "    for i, j in obs_rc_locs\n",
+    "]"
    ]
   },
   {
@@ -1112,8 +1153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid_x, grid_y = np.meshgrid(gwf.modelgrid.xycenters[0],\n",
-    "                             gwf.modelgrid.xycenters[1])"
+    "grid_x, grid_y = np.meshgrid(gwf.modelgrid.xycenters[0], gwf.modelgrid.xycenters[1])"
    ]
   },
   {
@@ -1156,7 +1196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resid_levels = np.arange(-2, 2.25, .25)"
+    "resid_levels = np.arange(-2, 2.25, 0.25)"
    ]
   },
   {
@@ -1179,7 +1219,14 @@
     "    ax.scatter(x, y, s=3, c=\"black\")\n",
     "    for i, txt in enumerate(resid_wt):\n",
     "        ax.annotate(f\"{txt:.2f}\", (x[i], y[i]))\n",
-    "    cs = ax.contour(grid_x, grid_y, grid_resid_wt, levels=resid_levels, linewidths=0.75, colors=\"red\")\n",
+    "    cs = ax.contour(\n",
+    "        grid_x,\n",
+    "        grid_y,\n",
+    "        grid_resid_wt,\n",
+    "        levels=resid_levels,\n",
+    "        linewidths=0.75,\n",
+    "        colors=\"red\",\n",
+    "    )\n",
     "    plt.clabel(cs, inline=True, fontsize=8)\n",
     "    ax.set_title(\"Water Table\")\n",
     "\n",
@@ -1191,7 +1238,14 @@
     "    ax.scatter(x, y, s=3, c=\"black\")\n",
     "    for i, txt in enumerate(resid_aq):\n",
     "        ax.annotate(f\"{txt:.2f}\", (x[i], y[i]), clip_on=False)\n",
-    "    cs = ax.contour(grid_x, grid_y, grid_resid_aq, levels=resid_levels, linewidths=0.75, colors=\"red\")\n",
+    "    cs = ax.contour(\n",
+    "        grid_x,\n",
+    "        grid_y,\n",
+    "        grid_resid_aq,\n",
+    "        levels=resid_levels,\n",
+    "        linewidths=0.75,\n",
+    "        colors=\"red\",\n",
+    "    )\n",
     "    plt.clabel(cs, inline=True, fontsize=8)\n",
     "    ax.set_title(\"Lower Aquifer\")"
    ]
@@ -1243,7 +1297,7 @@
     "with flopy.plot.styles.USGSMap():\n",
     "    fig, axs = plt.subplots(1, 5, figsize=(9, 3), sharey=True)\n",
     "    fig.suptitle(\"Drawdown - Case A\")\n",
-    "    ddn = gwf.output.head().get_data(totim=1.0) - gwf.output.head().get_data(totim=2.0) \n",
+    "    ddn = gwf.output.head().get_data(totim=1.0) - gwf.output.head().get_data(totim=2.0)\n",
     "\n",
     "    ddn_max = ddn[:, 16, :].max()\n",
     "\n",
@@ -1316,10 +1370,10 @@
     "with flopy.plot.styles.USGSMap():\n",
     "    fig, axs = plt.subplots(1, 5, figsize=(9, 3), sharey=True)\n",
     "    fig.suptitle(\"Drawdown - Case B\")\n",
-    "    ddn = gwf.output.head().get_data(totim=1.0) - gwf.output.head().get_data(totim=3.0) \n",
-    "    \n",
+    "    ddn = gwf.output.head().get_data(totim=1.0) - gwf.output.head().get_data(totim=3.0)\n",
+    "\n",
     "    ddn_max = ddn[:, 16, :].max()\n",
-    "    \n",
+    "\n",
     "    for idx in range(nlay):\n",
     "        ax = axs[idx]\n",
     "        mm = flopy.plot.PlotMapView(model=gwf, layer=idx, ax=ax)\n",
@@ -1389,8 +1443,8 @@
     "with flopy.plot.styles.USGSMap():\n",
     "    fig, axs = plt.subplots(1, 5, figsize=(9, 3), sharey=True)\n",
     "    fig.suptitle(\"Drawdown - Extra Run\")\n",
-    "    ddn = gwf.output.head().get_data(totim=1.0) - gwf.output.head().get_data(totim=4.0) \n",
-    "    \n",
+    "    ddn = gwf.output.head().get_data(totim=1.0) - gwf.output.head().get_data(totim=4.0)\n",
+    "\n",
     "    ddn_max = ddn[:, 16, :].max()\n",
     "\n",
     "    for idx in range(nlay):\n",
@@ -1475,10 +1529,10 @@
     "\n",
     "    ax = axs[1]\n",
     "    ax.set_ylim(0, 50)\n",
-    "    ax.plot(df[\"totim\"], -100. * (Q - Q[0]) / Q[0], ls=\"-\", marker=\"o\", clip_on=False)\n",
+    "    ax.plot(df[\"totim\"], -100.0 * (Q - Q[0]) / Q[0], ls=\"-\", marker=\"o\", clip_on=False)\n",
     "    ax.set_ylabel(\"Reduction\\n in River\\nDischarge, %\")\n",
     "    ax.set_xlabel(\"Stress Period\")\n",
-    "    ax.set_xticks([1, 2, 3, 4], [\"Calibration\", \"Case A\", \"Case B\", \"Extra Run\"])\n"
+    "    ax.set_xticks([1, 2, 3, 4], [\"Calibration\", \"Case A\", \"Case B\", \"Extra Run\"])"
    ]
   },
   {
@@ -1511,10 +1565,10 @@
     "\n",
     "    ax = axs[1]\n",
     "    ax.set_ylim(0, 50)\n",
-    "    ax.plot(df[\"totim\"], -100. * (Q - Q[0]) / Q[0], ls=\"-\", marker=\"o\", clip_on=False)\n",
+    "    ax.plot(df[\"totim\"], -100.0 * (Q - Q[0]) / Q[0], ls=\"-\", marker=\"o\", clip_on=False)\n",
     "    ax.set_ylabel(\"Reduction\\n in River\\nDischarge, %\")\n",
     "    ax.set_xlabel(\"Stress Period\")\n",
-    "    ax.set_xticks([1, 2, 3, 4], [\"Calibration\", \"Case A\", \"Case B\", \"Extra Run\"])\n"
+    "    ax.set_xticks([1, 2, 3, 4], [\"Calibration\", \"Case A\", \"Case B\", \"Extra Run\"])"
    ]
   },
   {
@@ -1556,11 +1610,16 @@
     "with flopy.plot.styles.USGSPlot():\n",
     "    fig, ax = plt.subplots(1, 1, figsize=(9, 1.5))\n",
     "\n",
-    "    ax.plot(df[\"totim\"], df[\"LAKE-N\"], ls=\"-\", marker=\"o\",)\n",
+    "    ax.plot(\n",
+    "        df[\"totim\"],\n",
+    "        df[\"LAKE-N\"],\n",
+    "        ls=\"-\",\n",
+    "        marker=\"o\",\n",
+    "    )\n",
     "    ax.set_ylabel(\"Lake\\nStage, ft\")\n",
     "    ax.set_xlabel(\"Stress Period\")\n",
     "    ax.set_xticks([1, 2, 3, 4], [\"Calibration\", \"Case A\", \"Case B\", \"Extra Run\"])\n",
-    "    ax.set_ylim(8, 12)\n"
+    "    ax.set_ylim(8, 12)"
    ]
   },
   {
