--- a/exercises/notebooks/SV_advanced.ipynb
+++ b/exercises/notebooks/SV_advanced.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_frequency = \"annual\"  # monthly or annual"
+    "sample_frequency = \"monthly\"  # monthly or annual"
    ]
   },
   {
@@ -1782,7 +1782,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tampa25modflowpest",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
