--- a/exercises/synthetic-valley/SV_flopy.ipynb
+++ b/exercises/synthetic-valley/SV_flopy.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_frequency = \"annual\"  # monthly or annual\n",
+    "sample_frequency = \"monthly\"  # monthly or annual\n",
     "useET = True"
    ]
   },
@@ -641,9 +641,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction_spd = {\n",
-    "    (idx_end_period2 + 1): [((4, 34, 15), -300000.0)],\n",
-    "}"
+    "prediction_spd = {}\n",
+    "for n in range(idx_end_period2 + 1, nper):\n",
+    "    # rate = 0.0\n",
+    "    # if n >= idx_end_period2 + 1:\n",
+    "    rate = -300000.0\n",
+    "    prediction_spd[n] = [((4, 34, 15), rate)]"
    ]
   },
   {
@@ -754,6 +757,14 @@
    "id": "58",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "obs_path = pl.Path(\"data\")\n",
     "combined_data = [obs_rc_locs, well_depth, aq_layer]\n",
@@ -764,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,26 +825,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
     "obs_loc = {}\n",
     "obs_loc[f\"{name}.gwf.wt.csv\"] = [\n",
-    "    (f\"WT{idx + 1: 02d}\", \"HEAD\", (0, i, j)) for idx, (i, j) in enumerate(obs_rc_locs)\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "65",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "obs_loc[f\"{name}.gwf.aq.csv\"] = [\n",
-    "    (f\"AQ{idx + 1: 02d}\", \"HEAD\", (aq_layer[idx], i, j))\n",
-    "    for idx, (i, j) in enumerate(obs_rc_locs)\n",
+    "    (f\"wt{idx + 1:02d}\", \"HEAD\", (0, i, j)) for idx, (i, j) in enumerate(obs_rc_locs)\n",
     "]"
    ]
   },
@@ -841,6 +839,29 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs_loc[f\"{name}.gwf.aq.csv\"] = [\n",
+    "    (f\"aq{idx + 1:02d}\", \"HEAD\", (aq_layer[idx], i, j))\n",
+    "    for idx, (i, j) in enumerate(obs_rc_locs)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs_loc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +897,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69",
+   "id": "71",
    "metadata": {},
    "source": [
     "## Build the model"
@@ -885,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +1036,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,7 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1144,7 +1165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88",
+   "id": "90",
    "metadata": {},
    "source": [
     "## Plot the results\n",
@@ -1155,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1173,7 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,7 +1212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,28 +1230,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92",
-   "metadata": {},
-   "source": [
-    "### Simulated Heads and Drawdown"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "levels = np.arange(2, 20.0, 2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "94",
    "metadata": {},
    "source": [
-    "#### Calibration"
+    "### Simulated Heads and Drawdown"
    ]
   },
   {
@@ -1240,13 +1243,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "levels = np.arange(2, 20.0, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96",
+   "metadata": {},
+   "source": [
+    "#### Calibration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "hds = gwf.output.head().get_data(totim=totim_end[0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1266,7 +1287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,7 +1297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98",
+   "id": "100",
    "metadata": {},
    "source": [
     "##### Calculate the residuals"
@@ -1285,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1295,7 +1316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100",
+   "id": "102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1306,7 +1327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101",
+   "id": "103",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1316,7 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1327,7 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,7 +1358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1349,7 +1370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "107",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,7 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106",
+   "id": "108",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1372,7 +1393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "107",
+   "id": "109",
    "metadata": {},
    "source": [
     "##### Plot the residuals"
@@ -1381,7 +1402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108",
+   "id": "110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1394,7 +1415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109",
+   "id": "111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110",
+   "id": "112",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111",
+   "id": "113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1425,7 +1446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112",
+   "id": "114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1436,7 +1457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113",
+   "id": "115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1447,7 +1468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114",
+   "id": "116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1457,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115",
+   "id": "117",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1507,7 +1528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "116",
+   "id": "118",
    "metadata": {},
    "source": [
     "**NOTE:** There is spatial bias in the simulated results (*i.e.*, residuals are positive in the Northeast and negative in the Southwest)."
@@ -1515,7 +1536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "117",
+   "id": "119",
    "metadata": {},
    "source": [
     "#### Case A"
@@ -1524,7 +1545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "118",
+   "id": "120",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1545,7 +1566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119",
+   "id": "121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1570,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120",
+   "id": "122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1580,7 +1601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121",
+   "id": "123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1590,7 +1611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "122",
+   "id": "124",
    "metadata": {},
    "source": [
     "#### Extra Run"
@@ -1599,7 +1620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "123",
+   "id": "125",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1620,7 +1641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "124",
+   "id": "126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1645,7 +1666,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "125",
+   "id": "127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1655,7 +1676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "126",
+   "id": "128",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1665,7 +1686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "127",
+   "id": "129",
    "metadata": {},
    "source": [
     "### Streamflow results"
@@ -1674,7 +1695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "128",
+   "id": "130",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1692,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "129",
+   "id": "131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1718,7 +1739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "130",
+   "id": "132",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1743,7 +1764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "131",
+   "id": "133",
    "metadata": {},
    "source": [
     "### Lake stage"
@@ -1752,7 +1773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "132",
+   "id": "134",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1762,7 +1783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "133",
+   "id": "135",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1773,7 +1794,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "134",
+   "id": "136",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1795,7 +1816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "135",
+   "id": "137",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1803,7 +1824,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tampa25modflowpest",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
