--- a/exercises/notebooks/SV_calibrate.ipynb
+++ b/exercises/notebooks/SV_calibrate.ipynb
@@ -814,13 +814,10 @@
    "outputs": [],
    "source": [
     "df = gwf.riv.output.obs().get_dataframe()\n",
-    "df[\"PF\"] /= -86400\n",
-    "df[\"RIVFLOW\"] /= -86400\n",
-    "df[\"TOTAL\"] = df[\"PF\"] + df[\"RIVFLOW\"]\n",
+    "df[\"RIV-SWGW\"] /= -86400\n",
+    "df[\"TOTAL\"] = df[\"RIV-SWGW\"]\n",
     "Q0 = df[\"TOTAL\"].iloc[0]\n",
     "df[\"PCT_DIFF\"] = -100.0 * (df[\"TOTAL\"] - Q0) / Q0\n",
-    "Q0 = df[\"PF\"].iloc[0]\n",
-    "df[\"PF_PCT_DIFF\"] = -100.0 * (df[\"PF\"] - Q0) / Q0\n",
     "df"
    ]
   },
@@ -851,34 +848,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "65",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with flopy.plot.styles.USGSPlot():\n",
-    "    fig, axs = plt.subplots(2, 1, figsize=(9, 3), sharex=True)\n",
-    "\n",
-    "    fig.suptitle(\"Pollock's Ford - Gage 2\")\n",
-    "\n",
-    "    ax = axs[0]\n",
-    "    # ax.set_ylim(-2.5, 5)\n",
-    "    df[\"PF\"].plot(ax=ax, ls=\"-\", marker=\"o\", clip_on=False)\n",
-    "    ax.axhline(0, lw=0.5, color=\"black\")\n",
-    "    ax.set_ylabel(\"River\\nDischarge, cfs\")\n",
-    "\n",
-    "    ax = axs[1]\n",
-    "    # ax.set_ylim(-100, 100)\n",
-    "    df[\"PF_PCT_DIFF\"].plot(ax=ax, ls=\"-\", marker=\"o\", clip_on=False)\n",
-    "    ax.axhline(0, lw=0.5, color=\"black\")\n",
-    "    ax.set_ylabel(\"Reduction\\n in River\\nDischarge, %\")\n",
-    "    ax.set_xlabel(\"Stress Period\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "66",
+   "id": "65",
    "metadata": {},
    "source": [
     "### Lake stage"
@@ -887,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,14 +879,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
     "with flopy.plot.styles.USGSPlot():\n",
     "    fig, ax = plt.subplots(1, 1, figsize=(9, 1.5))\n",
     "\n",
-    "    lake_df[\"LAKE\"].plot(\n",
+    "    lake_df[\"LAKE-STAGE\"].plot(\n",
     "        ax=ax,\n",
     "        ls=\"-\",\n",
     "        marker=\"o\",\n",
@@ -929,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -937,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -945,7 +916,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tampa25modflowpest",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
