--- a/exercises/synthetic-valley/SV_flopy.ipynb
+++ b/exercises/synthetic-valley/SV_flopy.ipynb
@@ -524,7 +524,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "riv_bndname = [\"PF\", \"PF\"] + [\"RIV\" for i in range(nriv - 2)]"
+    "riv_bndname = [\"RIV\" for i in range(nriv)]"
    ]
   },
   {
@@ -880,8 +880,7 @@
    "outputs": [],
    "source": [
     "obs_loc[f\"{name}.lake.obs.csv\"] = [\n",
-    "    (\"Lake\", \"HEAD\", (0, 3, 3)),\n",
-    "    (\"Lake-S\", \"HEAD\", (0, 15, 8)),\n",
+    "    (\"Lake-stage\", \"HEAD\", (0, 15, 8)),\n",
     "]"
    ]
   },
@@ -1055,7 +1054,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "riv_obs = {f\"{name}.riv.obs.csv\": [(\"PF\", \"RIV\", \"PF\"), (\"RIVFLOW\", \"RIV\", \"RIV\")]}"
+    "riv_obs = {f\"{name}.riv.obs.csv\": [(\"RIV-SWGW\", \"RIV\", \"RIV\")]}"
    ]
   },
   {
@@ -1120,6 +1119,7 @@
     "    gwf,\n",
     "    head_filerecord=f\"{name}.hds\",\n",
     "    budget_filerecord=f\"{name}.cbc\",\n",
+    "    budgetcsv_filerecord=f\"{name}-budget.csv\",\n",
     "    saverecord=[(\"HEAD\", \"ALL\"), (\"BUDGET\", \"ALL\")],\n",
     ")"
    ]
@@ -1700,13 +1700,10 @@
    "outputs": [],
    "source": [
     "df = riv.output.obs().get_dataframe(start_datetime=start_date_time)\n",
-    "df[\"PF\"] /= -86400\n",
-    "df[\"RIVFLOW\"] /= -86400\n",
-    "df[\"TOTAL\"] = df[\"PF\"] + df[\"RIVFLOW\"]\n",
+    "df[\"RIV-SWGW\"] /= -86400\n",
+    "df[\"TOTAL\"] = df[\"RIV-SWGW\"]\n",
     "Q0 = df[\"TOTAL\"].iloc[0]\n",
     "df[\"PCT_DIFF\"] = -100.0 * (df[\"TOTAL\"] - Q0) / Q0\n",
-    "Q0 = df[\"PF\"].iloc[0]\n",
-    "df[\"PF_PCT_DIFF\"] = -100.0 * (df[\"PF\"] - Q0) / Q0\n",
     "df"
    ]
   },
@@ -1737,34 +1734,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "132",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with flopy.plot.styles.USGSPlot():\n",
-    "    fig, axs = plt.subplots(2, 1, figsize=(9, 3), sharex=True)\n",
-    "\n",
-    "    fig.suptitle(\"Pollock's Ford - Gage 2\")\n",
-    "\n",
-    "    ax = axs[0]\n",
-    "    ax.set_ylim(-2.5, 5)\n",
-    "    df[\"PF\"].plot(ax=ax, ls=\"-\", marker=\"o\", clip_on=False)\n",
-    "    ax.axhline(0, lw=0.5, color=\"black\")\n",
-    "    ax.set_ylabel(\"River\\nDischarge, cfs\")\n",
-    "\n",
-    "    ax = axs[1]\n",
-    "    ax.set_ylim(-100, 200)\n",
-    "    df[\"PF_PCT_DIFF\"].plot(ax=ax, ls=\"-\", marker=\"o\", clip_on=False)\n",
-    "    ax.axhline(0, lw=0.5, color=\"black\")\n",
-    "    ax.set_ylabel(\"Reduction\\n in River\\nDischarge, %\")\n",
-    "    ax.set_xlabel(\"Stress Period\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "133",
+   "id": "132",
    "metadata": {},
    "source": [
     "### Lake stage"
@@ -1773,7 +1744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "134",
+   "id": "133",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1783,7 +1754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "135",
+   "id": "134",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1794,14 +1765,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "136",
+   "id": "135",
    "metadata": {},
    "outputs": [],
    "source": [
     "with flopy.plot.styles.USGSPlot():\n",
     "    fig, ax = plt.subplots(1, 1, figsize=(9, 1.5))\n",
     "\n",
-    "    lak_df[\"LAKE\"].plot(\n",
+    "    lak_df[\"LAKE-STAGE\"].plot(\n",
     "        ax=ax,\n",
     "        ls=\"-\",\n",
     "        marker=\"o\",\n",
@@ -1816,7 +1787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "137",
+   "id": "136",
    "metadata": {},
    "outputs": [],
    "source": []
