--- a/exercises/notebooks/SV_advanced.ipynb
+++ b/exercises/notebooks/SV_advanced.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
+    "import os\n",
     "import flopy\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.tri as tri\n",
@@ -584,10 +585,8 @@
    "outputs": [],
    "source": [
     "sfr_obs = [\n",
-    "    (\"PF\", \"SFR\", \"PF\"),\n",
-    "    (\"RIVFLOW\", \"SFR\", \"RIV\"),\n",
-    "    (\"PFFLOW\", \"downstream-flow\", 1),\n",
-    "    (\"DSFLOW\", \"downstream-flow\", nreaches - 1),\n",
+    "    (\"RIV-SWGW\", \"SFR\", \"RIV\"),\n",
+    "    (\"RIV-FLOW\", \"downstream-flow\", nreaches - 1),\n",
     "]\n",
     "sfr_obs = {\n",
     "    f\"{name}.sfr.obs.csv\": sfr_obs,\n",
@@ -729,8 +728,8 @@
    "source": [
     "lake_obs = {\n",
     "    f\"{name}.lake.obs.csv\": [\n",
-    "        (\"LAKE\", \"STAGE\", \"LAKE_HARBAUGH\"),\n",
-    "        (\"SWGW\", \"LAK\", \"LAKE_HARBAUGH\"),\n",
+    "        (\"LAKE-STAGE\", \"STAGE\", \"LAKE_HARBAUGH\"),\n",
+    "        (\"LAKE-SWGW\", \"LAK\", \"LAKE_HARBAUGH\"),\n",
     "    ]\n",
     "}"
    ]
@@ -1631,17 +1630,13 @@
    "source": [
     "if isSFR:\n",
     "    df = gwf.sfr.output.obs().get_dataframe()\n",
-    "    df[\"PFFLOW\"] /= -86400\n",
-    "    df[\"DSFLOW\"] /= -86400\n",
+    "    df[\"RIV-SWGW\"] /= -86400\n",
+    "    df[\"RIV-FLOW\"] /= -86400\n",
     "else:\n",
     "    df = gwf.riv.output.obs().get_dataframe()\n",
-    "df[\"PF\"] /= -86400\n",
-    "df[\"RIVFLOW\"] /= -86400\n",
-    "df[\"TOTAL\"] = df[\"PF\"] + df[\"RIVFLOW\"]\n",
+    "df[\"TOTAL\"] = df[\"RIV-SWGW\"]\n",
     "Q0 = df[\"TOTAL\"].iloc[0]\n",
     "df[\"PCT_DIFF\"] = -100.0 * (df[\"TOTAL\"] - Q0) / Q0\n",
-    "Q0 = df[\"PF\"].iloc[0]\n",
-    "df[\"PF_PCT_DIFF\"] = -100.0 * (df[\"PF\"] - Q0) / Q0\n",
     "df"
    ]
   },
@@ -1659,7 +1654,7 @@
     "\n",
     "    ax = axs[0]\n",
     "    ax.set_ylim(-5, 25)\n",
-    "    df[\"TOTAL\"].plot(ax=ax, ls=\"-\", marker=\"o\", clip_on=False)\n",
+    "    df[\"RIV-FLOW\"].plot(ax=ax, ls=\"-\", marker=\"o\", clip_on=False)\n",
     "    ax.axhline(0, lw=0.5, color=\"black\")\n",
     "    ax.set_ylabel(\"River\\nDischarge, cfs\")\n",
     "\n",
@@ -1672,34 +1667,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "121",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with flopy.plot.styles.USGSPlot():\n",
-    "    fig, axs = plt.subplots(2, 1, figsize=(9, 3), sharex=True)\n",
-    "\n",
-    "    fig.suptitle(\"Pollock's Ford - Gage 2\")\n",
-    "\n",
-    "    ax = axs[0]\n",
-    "    ax.set_ylim(-2.5, 5)\n",
-    "    df[\"PF\"].plot(ax=ax, ls=\"-\", marker=\"o\", clip_on=False)\n",
-    "    ax.axhline(0, lw=0.5, color=\"black\")\n",
-    "    ax.set_ylabel(\"River\\nDischarge, cfs\")\n",
-    "\n",
-    "    ax = axs[1]\n",
-    "    ax.set_ylim(-100, 100)\n",
-    "    df[\"PF_PCT_DIFF\"].plot(ax=ax, ls=\"-\", marker=\"o\", clip_on=False)\n",
-    "    ax.axhline(0, lw=0.5, color=\"black\")\n",
-    "    ax.set_ylabel(\"Reduction\\n in River\\nDischarge, %\")\n",
-    "    ax.set_xlabel(\"Stress Period\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "122",
+   "id": "121",
    "metadata": {},
    "source": [
     "### Lake stage"
@@ -1708,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "123",
+   "id": "122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1721,7 +1690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "124",
+   "id": "123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1731,18 +1700,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "125",
+   "id": "124",
    "metadata": {},
    "outputs": [],
    "source": [
     "if isLake:\n",
-    "    lake_df[\"SWGW\"] *= 12.0 / lake_area"
+    "    lake_df[\"LAKE-SWGW\"] *= 12.0 / lake_area"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "126",
+   "id": "125",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1752,14 +1721,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "127",
+   "id": "126",
    "metadata": {},
    "outputs": [],
    "source": [
     "with flopy.plot.styles.USGSPlot():\n",
     "    fig, ax = plt.subplots(1, 1, figsize=(9, 1.5))\n",
     "\n",
-    "    lake_df[\"LAKE\"].plot(\n",
+    "    lake_df[\"LAKE-STAGE\"].plot(\n",
     "        ax=ax,\n",
     "        ls=\"-\",\n",
     "        marker=\"o\",\n",
@@ -1774,7 +1743,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "127",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ws"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "128",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ofiles = [\n",
+    "    \"sv.lake.obs.csv\",\n",
+    "    \"sv.sfr.obs.csv\",\n",
+    "    \"sv.gwf.wt.csv\",\n",
+    "    \"sv.gwf.scenario.csv\",\n",
+    "    \"sv.gwf.aq.csv\",\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "129",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perlen = sim.tdis.perioddata.array[\"perlen\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "130",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs = [pd.read_csv(os.path.join(ws, ofile), index_col=0) for ofile in ofiles]\n",
+    "df = pd.concat(dfs, axis=1)\n",
+    "# df.index = pd.to_datetime(sim.tdis.start_date_time.data) + pd.to_timedelta(np.cumsum(perlen),unit=\"d\")\n",
+    "df.columns = df.columns.map(str.lower)\n",
+    "df.to_csv(os.path.join(ws, \"raw_obs.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "131",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "132",
    "metadata": {},
    "outputs": [],
    "source": []
