--- a/exercises/notebooks/SV_setup_control_file.ipynb
+++ b/exercises/notebooks/SV_setup_control_file.ipynb
@@ -22,8 +22,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# safe_org_d = os.path.join(\"..\",\"models\",\"synthetic-valley-base-annual\")\n",
-    "safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-base-monthly\")\n",
+    "safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-base-annual\")\n",
+    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-base-monthly\")\n",
+    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-advanced-monthly\")\n",
+    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-advanced-annual\")\n",
     "assert os.path.exists(safe_org_d)"
    ]
   },
@@ -88,6 +90,14 @@
    "id": "6",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "pf.mod_sys_cmds.append(\"mf6\")"
    ]
@@ -95,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,6 +118,9 @@
     "obs_csv_files.extend(\n",
     "    [f for f in os.listdir(pf.new_d) if f.startswith(\"sv.riv\") and f.endswith(\".csv\")]\n",
     ")\n",
+    "obs_csv_files.extend(\n",
+    "    [f for f in os.listdir(pf.new_d) if f.startswith(\"sv.sfr\") and f.endswith(\".csv\")]\n",
+    ")\n",
     "\n",
     "\n",
     "obs_csv_files"
@@ -116,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,51 +399,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
     "rech_files = [\n",
     "    f for f in os.listdir(pf.new_d) if f.startswith(\"sv.rch_stress_period_data_\")\n",
     "]\n",
-    "assert len(rech_files) == sim.tdis.nper.data\n",
-    "rech_files.sort()\n",
-    "rech_files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pf.add_parameters(\n",
-    "    rech_files,\n",
-    "    par_type=\"constant\",\n",
-    "    lower_bound=0.8,\n",
-    "    upper_bound=1.2,\n",
-    "    par_name_base=\"rech-cn\",\n",
-    "    pargp=\"rech-cn\",\n",
-    "    transform=None,\n",
-    "    index_cols=[0, 1, 2],\n",
-    "    use_cols=[3],\n",
-    "    mfile_skip=0,\n",
-    ")\n",
-    "for rech_file in rech_files:\n",
-    "    kper = int(rech_file.split(\".\")[1].split(\"_\")[-1]) - 1\n",
+    "if len(rech_files) == 0:\n",
+    "    uzf_pak_file = \"sv.uzf_packagedata.txt\"\n",
+    "    if os.path.exists(os.path.join(pf.new_d, uzf_pak_file)):\n",
+    "        pass\n",
+    "    else:\n",
+    "        raise Exception(\"didnt find any rech files or uzg package data file\")\n",
+    "\n",
+    "else:\n",
+    "    assert len(rech_files) == sim.tdis.nper.data\n",
+    "    rech_files.sort()\n",
     "    df = pf.add_parameters(\n",
-    "        rech_file,\n",
+    "        rech_files,\n",
     "        par_type=\"constant\",\n",
     "        lower_bound=0.8,\n",
     "        upper_bound=1.2,\n",
-    "        par_name_base=\"rech-tcn_kper:{0}\".format(kper),\n",
-    "        pargp=\"rech-tcn_kper:{0}\".format(kper),\n",
+    "        par_name_base=\"rech-cn\",\n",
+    "        pargp=\"rech-cn\",\n",
     "        transform=None,\n",
     "        index_cols=[0, 1, 2],\n",
     "        use_cols=[3],\n",
     "        mfile_skip=0,\n",
-    "    )"
+    "    )\n",
+    "    for rech_file in rech_files:\n",
+    "        kper = int(rech_file.split(\".\")[1].split(\"_\")[-1]) - 1\n",
+    "        df = pf.add_parameters(\n",
+    "            rech_file,\n",
+    "            par_type=\"constant\",\n",
+    "            lower_bound=0.8,\n",
+    "            upper_bound=1.2,\n",
+    "            par_name_base=\"rech-tcn_kper:{0}\".format(kper),\n",
+    "            pargp=\"rech-tcn_kper:{0}\".format(kper),\n",
+    "            transform=None,\n",
+    "            index_cols=[0, 1, 2],\n",
+    "            use_cols=[3],\n",
+    "            mfile_skip=0,\n",
+    "        )"
    ]
   },
   {
@@ -439,38 +450,12 @@
    "id": "23",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pwel_files = [\n",
-    "    f for f in os.listdir(pf.new_d) if f.startswith(\"sv.pwell.wel_stress_period_data_\")\n",
-    "]\n",
-    "assert len(pwel_files) == sim.tdis.nper.data - 1"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "24",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for pwel_file in pwel_files:\n",
-    "    kper = kper = int(pwel_file.split(\".\")[2].split(\"_\")[-1]) - 1\n",
-    "    pf.add_parameters(\n",
-    "        pwel_file,\n",
-    "        par_type=\"grid\",\n",
-    "        index_cols=[0, 1, 2],\n",
-    "        use_cols=[3],\n",
-    "        upper_bound=1.1,\n",
-    "        lower_bound=0.9,\n",
-    "        pargp=\"pwel_kper:{0}\".format(kper),\n",
-    "        par_name_base=\"pwel_kper:{0}\".format(kper),\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +536,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "31",
+   "id": "30",
    "metadata": {},
    "source": [
     "assert pst.phi < 1.e7"
@@ -560,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": []
