--- a/exercises/notebooks/SV_advanced.ipynb
+++ b/exercises/notebooks/SV_advanced.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_frequency = \"monthly\"  # monthly or annual"
+    "sample_frequency = \"annual\"  # monthly or annual"
    ]
   },
   {
