--- a/exercises/notebooks/SV_setup_control_file.ipynb
+++ b/exercises/notebooks/SV_setup_control_file.ipynb
@@ -12,7 +12,8 @@
     "import shutil\n",
     "import flopy\n",
     "import pandas as pd\n",
-    "import pyemu"
+    "import pyemu\n",
+    "import helpers"
    ]
   },
   {
@@ -22,10 +23,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-base-annual\")\n",
+    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-base-annual\")\n",
     "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-base-monthly\")\n",
     "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-advanced-monthly\")\n",
-    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-advanced-annual\")\n",
+    "safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-advanced-annual\")\n",
     "assert os.path.exists(safe_org_d)"
    ]
   },
@@ -72,6 +73,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import importlib\n",
+    "\n",
+    "importlib.reload(helpers)\n",
+    "helpers.process_csv_files(model_ws=tmp_d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pf = pyemu.utils.PstFrom(\n",
     "    tmp_d,\n",
     "    \"model_and_pest_files\",\n",
@@ -87,15 +101,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pf.add_py_function(\"helpers.py\", \"process_csv_files()\", is_pre_cmd=False)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +155,7 @@
     "    df = pd.read_csv(os.path.join(pf.new_d, obs_csv_file), index_col=0)\n",
     "    pf.add_observations(\n",
     "        obs_csv_file,\n",
-    "        index_cols=\"time\",\n",
+    "        index_cols=\"datetime\",\n",
     "        use_cols=df.columns.to_list(),\n",
     "        prefix=prefix,\n",
     "        obsgp=prefix,\n",
@@ -150,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -455,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +552,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "30",
+   "id": "31",
    "metadata": {},
    "source": [
     "assert pst.phi < 1.e7"
@@ -545,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +597,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pst.parameter_data.loc[pe.columns, \"parval1\"] = pe.iloc[0, :].values\n",
+    "pst.control_data.noptmax = 0\n",
+    "pst.write(os.path.join(pf.new_d, \"test.pst\"), version=2)\n",
+    "pyemu.os_utils.run(\"pestpp-ies test.pst\", cwd=pf.new_d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": []
