--- a/exercises/notebooks/SV_advanced.ipynb
+++ b/exercises/notebooks/SV_advanced.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_frequency = \"annual\"  # monthly or annual"
+    "sample_frequency = \"monthly\"  # monthly or annual"
    ]
   },
   {
@@ -188,7 +188,7 @@
    "outputs": [],
    "source": [
     "name = \"sv\"\n",
-    "ws = pl.Path(f\"../models/synthetic-valley-base-{sample_frequency}\")"
+    "ws = pl.Path(f\"../models/synthetic-valley-working-{sample_frequency}\")"
    ]
   },
   {
