--- a/exercises/synthetic-valley/SV_flopy.ipynb
+++ b/exercises/synthetic-valley/SV_flopy.ipynb
@@ -1790,6 +1790,59 @@
    "id": "136",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "ws = pl.Path(f\"../models/synthetic-valley-working-{sample_frequency}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "137",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sim.set_sim_path(ws)\n",
+    "gwf = sim.get_model()\n",
+    "array = gwf.npf.k.array.copy()\n",
+    "for k in range(array.shape[0]):\n",
+    "    if k == 2:\n",
+    "        mn = array[k, :, :].min()\n",
+    "        mx = array[k, :, :].max()\n",
+    "        array[k, :, :] = mx\n",
+    "        array[k, : int(array.shape[1] / 2), :] = mn\n",
+    "    else:\n",
+    "        array[k, :, :] = 10 ** (np.log10(array[k, :, :]).mean())\n",
+    "gwf.npf.k = array\n",
+    "\n",
+    "array = gwf.npf.k33.array.copy()\n",
+    "for k in range(array.shape[0]):\n",
+    "    if k == 2:\n",
+    "        mn = array[k, :, :].min()\n",
+    "        mx = array[k, :, :].max()\n",
+    "        array[k, :, :] = mx\n",
+    "        array[k, : int(array.shape[1] / 2), :] = mn\n",
+    "    else:\n",
+    "        array[k, :, :] = 10 ** (np.log10(array[k, :, :]).mean())\n",
+    "gwf.npf.k33 = array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "138",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sim.write_simulation()\n",
+    "sim.run_simulation()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "139",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
