--- a/exercises/notebooks/SV_setup_control_file.ipynb
+++ b/exercises/notebooks/SV_setup_control_file.ipynb
@@ -23,10 +23,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-base-annual\")\n",
-    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-base-monthly\")\n",
-    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-advanced-monthly\")\n",
-    "safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-advanced-annual\")\n",
+    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-annual\")\n",
+    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-monthly\")\n",
+    "safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-advanced-monthly\")\n",
+    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-advanced-annual\")\n",
     "assert os.path.exists(safe_org_d)"
    ]
   },
@@ -304,6 +304,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for k_file in k_files[::2]:\n",
+    "    print(k_file)\n",
+    "    pf.add_observations(\n",
+    "        k_file,\n",
+    "        obsgp=k_file.split(\".\")[1].replace(\"_\", \"-\"),\n",
+    "        prefix=k_file.split(\".\")[1].replace(\"_\", \"-\"),\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ss_files = [f for f in os.listdir(pf.new_d) if f.startswith(\"sv.sto_ss\")]\n",
     "assert len(ss_files) == gwf.dis.nlay.data"
    ]
@@ -311,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -471,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +568,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "source": [
     "assert pst.phi < 1.e7"
@@ -561,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": []
