--- a/exercises/notebooks/SV_advanced.ipynb
+++ b/exercises/notebooks/SV_advanced.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "%matplotlib inline\n",
     "import os\n",
+    "import sys\n",
     "import flopy\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.tri as tri\n",
@@ -16,7 +17,9 @@
     "import pandas as pd\n",
     "import pathlib as pl\n",
     "import pickle\n",
-    "import xarray as xa"
+    "import xarray as xa\n",
+    "\n",
+    "sys.path.append(os.path.join(\"..\", \"notebooks\"))"
    ]
   },
   {
@@ -188,7 +191,8 @@
    "outputs": [],
    "source": [
     "name = \"sv\"\n",
-    "ws = pl.Path(f\"../models/synthetic-valley-working-{sample_frequency}\")"
+    "base_ws = pl.Path(f\"../models/synthetic-valley-base-{sample_frequency}\")\n",
+    "advanced_ws = base_ws.parent / f\"synthetic-valley-truth-advanced-{sample_frequency}\""
    ]
   },
   {
@@ -198,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim = flopy.mf6.MFSimulation.load(sim_name=name, sim_ws=ws)"
+    "sim = flopy.mf6.MFSimulation.load(sim_name=name, sim_ws=base_ws)"
    ]
   },
   {
@@ -239,10 +243,7 @@
    "id": "19",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ws = ws.parent / f\"synthetic-valley-advanced-{sample_frequency}\"\n",
-    "print(ws)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -251,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim.set_sim_path(ws)"
+    "sim.set_sim_path(advanced_ws)"
    ]
   },
   {
@@ -1682,9 +1683,9 @@
    "outputs": [],
    "source": [
     "if isLake:\n",
-    "    fpth = ws / f\"{name}.lake.obs.csv\"\n",
+    "    fpth = advanced_ws / f\"{name}.lake.obs.csv\"\n",
     "else:\n",
-    "    fpth = ws / f\"{name}.gwf.scenario.csv\""
+    "    fpth = advanced_ws / f\"{name}.gwf.scenario.csv\""
    ]
   },
   {
@@ -1739,74 +1740,6 @@
     "    ax.set_xlabel(\"Stress Period\")\n",
     "    ax.set_ylim(10, 15)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "127",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ws"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "128",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ofiles = [\n",
-    "    \"sv.lake.obs.csv\",\n",
-    "    \"sv.sfr.obs.csv\",\n",
-    "    \"sv.gwf.wt.csv\",\n",
-    "    \"sv.gwf.scenario.csv\",\n",
-    "    \"sv.gwf.aq.csv\",\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "129",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "perlen = sim.tdis.perioddata.array[\"perlen\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "130",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfs = [pd.read_csv(os.path.join(ws, ofile), index_col=0) for ofile in ofiles]\n",
-    "df = pd.concat(dfs, axis=1)\n",
-    "# df.index = pd.to_datetime(sim.tdis.start_date_time.data) + pd.to_timedelta(np.cumsum(perlen),unit=\"d\")\n",
-    "df.columns = df.columns.map(str.lower)\n",
-    "df.to_csv(os.path.join(ws, \"raw_obs.csv\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "131",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "132",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
