--- a/exercises/notebooks/SV_obsvals_weights_noise.ipynb
+++ b/exercises/notebooks/SV_obsvals_weights_noise.ipynb
@@ -21,22 +21,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import helpers\n",
-    "\n",
-    "helpers.process_csv_files(\n",
-    "    os.path.join(\"..\", \"models\", \"synthetic-valley-advanced-monthly\")\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "obs_csv_fname = os.path.join(\n",
-    "    \"..\", \"models\", \"synthetic-valley-advanced-monthly\", \"raw_obs.csv\"\n",
+    "    \"..\", \"models\", \"synthetic-valley-truth-advanced-monthly\", \"raw_obs.csv\"\n",
     ")\n",
     "assert os.path.exists(obs_csv_fname)\n",
     "obsdf = pd.read_csv(obs_csv_fname, index_col=0, parse_dates=True)\n",
@@ -46,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,11 +53,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
     "obs = pst.observation_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nnobs = obs.loc[pd.notna(obs.usecol), :]"
    ]
   },
   {
@@ -83,7 +79,8 @@
    "source": [
     "prefixes = [\"wt\", \"aq\", \"lake-stage\", \"lake-swgw\", \"riv-flow\", \"riv-swgw\"]\n",
     "for prefix in prefixes:\n",
-    "    uobs = obs.loc[obs.usecol.str.contains(prefix), :].copy()\n",
+    "    print(prefix)\n",
+    "    uobs = nnobs.loc[nnobs.usecol.str.contains(prefix), :].copy()\n",
     "    uobs[\"datetime\"] = pd.to_datetime(uobs.datetime)\n",
     "    for usecol in uobs.usecol.unique():\n",
     "        uuobs = uobs.loc[uobs.usecol == usecol, :].copy()\n",
@@ -100,7 +97,8 @@
    "outputs": [],
    "source": [
     "obs[\"weight\"] = 0.0\n",
-    "obs[\"standard_deviation\"] = np.nan"
+    "obs[\"standard_deviation\"] = np.nan\n",
+    "obs[\"lower_bound\"] = np.nan"
    ]
   },
   {
@@ -110,15 +108,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hist_prefixes = [\"wt\", \"aq\", \"lake-stage\"]\n",
+    "obs_dict = {}\n",
+    "hist_prefixes = [\"wt\", \"aq\", \"lake-stage\", \"diff\"]\n",
     "for prefix in hist_prefixes:\n",
-    "    uobs = obs.loc[obs.usecol.str.startswith(prefix), :].copy()\n",
+    "    uobs = nnobs.loc[nnobs.usecol.str.startswith(prefix), :].copy()\n",
     "    print(uobs.usecol.unique())\n",
     "    uobs[\"datetime\"] = pd.to_datetime(uobs.datetime)\n",
     "    hist_uobs = uobs.loc[uobs.datetime.dt.year < 2015, :]\n",
+    "    obs.loc[hist_uobs.obsnme, \"datetime\"] = hist_uobs.datetime\n",
     "    if \"lake\" in prefix:\n",
     "        obs.loc[hist_uobs.obsnme, \"weight\"] = 1.0\n",
     "        obs.loc[hist_uobs.obsnme, \"standard_deviation\"] = 1.0\n",
+    "    elif \"diff\" in prefix:\n",
+    "        obs.loc[hist_uobs.obsnme, \"weight\"] = 5.0\n",
+    "        obs.loc[hist_uobs.obsnme, \"standard_deviation\"] = 0.2\n",
     "\n",
     "    else:\n",
     "        obs.loc[hist_uobs.obsnme, \"weight\"] = 2.0\n",
@@ -133,12 +136,18 @@
    "outputs": [],
    "source": [
     "if \"riv-flow\" in obs.usecol.unique():\n",
-    "    uobs = obs.loc[obs.usecol == \"riv-flow\", :]\n",
+    "    uobs = nnobs.loc[nnobs.usecol == \"riv-flow\", :]\n",
     "    uobs[\"datetime\"] = pd.to_datetime(uobs.datetime)\n",
     "    hist_uobs = uobs.loc[uobs.datetime.dt.year < 2015, :].copy()\n",
     "    hist_uobs[\"standard_deviation\"] = [\n",
-    "        max(0.1, oval * 0.2) for oval in hist_uobs.obsval.values\n",
+    "        max(0.1, oval * 0.1) for oval in hist_uobs.obsval.values\n",
     "    ]\n",
+    "    obs.loc[hist_uobs.obsnme, \"weight\"] = 0.001\n",
+    "    obs.loc[hist_uobs.obsnme, \"standard_deviation\"] = (\n",
+    "        hist_uobs.standard_deviation.values\n",
+    "    )\n",
+    "    obs.loc[hist_uobs.obsnme, \"datetime\"] = hist_uobs.datetime\n",
+    "\n",
     "    print(hist_uobs)"
    ]
   },
@@ -149,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pst.nnz_obs_names"
+    "pst.nnz_obs_groups"
    ]
   },
   {
@@ -168,6 +177,99 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nzobs = obs.loc[obs.weight > 0, :].copy()\n",
+    "obs[\"distance\"] = np.nan\n",
+    "grps = nzobs.obgnme.unique()\n",
+    "grps.sort()\n",
+    "struct_dict = {}\n",
+    "for grp in grps:\n",
+    "    gobs = nzobs.loc[nzobs.obgnme == grp, :].copy()\n",
+    "    gobs[\"datetime\"] = pd.to_datetime(gobs.datetime)\n",
+    "    gobs[\"distance\"] = (gobs.datetime - gobs.datetime.min()).dt.days\n",
+    "    obs.loc[gobs.obsnme, \"distance\"] = gobs.distance\n",
+    "    v = pyemu.geostats.ExpVario(contribution=1.0, a=365 * 5)\n",
+    "    gs = pyemu.geostats.GeoStruct(variograms=v, name=grp)\n",
+    "    struct_dict[gs] = gobs.obsnme.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noise = pyemu.helpers.autocorrelated_draw(pst, struct_dict, num_reals=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noise.to_csv(os.path.join(working_d, \"noise.csv\"))\n",
+    "pst.pestpp_options[\"ies_obs_en\"] = \"noise.csv\"\n",
+    "pst.control_data.noptmax = -2\n",
+    "pst.write(os.path.join(working_d, \"pest.pst\"), version=2)\n",
+    "pyemu.os_utils.run(\"pestpp-ies pest.pst\", cwd=working_d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phi_factors = {\"lake\": 0.2, \"aq\": 0.3, \"wt\": 0.3, \"diff\": 0.2}\n",
+    "if \"riv-flow\" in obs.usecol.unique():\n",
+    "    phi_factors = {\"lake\": 0.15, \"aq\": 0.25, \"wt\": 0.25, \"diff\": 0.15, \"riv-flow\": 0.2}\n",
+    "ser = pd.Series(phi_factors)\n",
+    "ser.to_csv(os.path.join(working_d, \"phi_facs.csv\"), index=True, header=False)\n",
+    "pst.pestpp_options[\"ies_phi_factor_file\"] = \"phi_facs.csv\"\n",
+    "pst.write(os.path.join(working_d, \"pest.pst\"), version=2)\n",
+    "pyemu.os_utils.run(\"pestpp-ies pest.pst\", cwd=working_d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pst.control_data.noptmax = 5\n",
+    "pst.pestpp_options[\"ies_num_reals\"] = 100\n",
+    "pst.write(os.path.join(working_d, \"pest.pst\"), version=2)\n",
+    "pyemu.os_utils.start_workers(\n",
+    "    working_d,\n",
+    "    \"pestpp-ies\",\n",
+    "    \"pest.pst\",\n",
+    "    num_workers=10,\n",
+    "    worker_root=\".\",\n",
+    "    master_dir=\"master_ies\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": []
