--- a/exercises/notebooks/SV_setup_control_file.ipynb
+++ b/exercises/notebooks/SV_setup_control_file.ipynb
@@ -138,7 +138,6 @@
     "    [f for f in os.listdir(pf.new_d) if f.startswith(\"sv.sfr\") and f.endswith(\".csv\")]\n",
     ")\n",
     "\n",
-    "\n",
     "obs_csv_files"
    ]
   },
@@ -320,6 +319,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "k33_files = [f for f in os.listdir(pf.new_d) if f.startswith(\"sv.npf_k33_layer3\")]\n",
+    "assert len(k33_files) == 1\n",
+    "df = pf.add_parameters(\n",
+    "    k33_files,\n",
+    "    par_type=\"pilotpoints\",\n",
+    "    pp_options={\"pp_space\": 3},\n",
+    "    lower_bound=0.1,\n",
+    "    upper_bound=10.0,\n",
+    "    geostruct=pp_geostruct,\n",
+    "    par_name_base=\"k33-pp-conf\",\n",
+    "    pargp=\"k33-pp-conf\",\n",
+    ")\n",
+    "df = pf.add_parameters(\n",
+    "    k33_files,\n",
+    "    par_type=\"constant\",\n",
+    "    lower_bound=0.1,\n",
+    "    upper_bound=10.0,\n",
+    "    par_name_base=\"k33-cn-conf\",\n",
+    "    pargp=\"k33-cn-conf\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ss_files = [f for f in os.listdir(pf.new_d) if f.startswith(\"sv.sto_ss\")]\n",
     "assert len(ss_files) == gwf.dis.nlay.data"
    ]
@@ -327,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -487,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +596,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "32",
+   "id": "33",
    "metadata": {},
    "source": [
     "assert pst.phi < 1.e7"
@@ -577,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": []
