--- a/exercises/synthetic-valley/SV_flopy.ipynb
+++ b/exercises/synthetic-valley/SV_flopy.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_frequency = \"monthly\"  # monthly or annual\n",
+    "sample_frequency = \"annual\"  # monthly or annual\n",
     "useET = True"
    ]
   },
@@ -413,6 +413,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "k33 /= k11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "k1 = k33[0, :, :]\n",
     "k1[lake_location == 1] = 2000000.0\n",
     "k33[0, :, :] = k1"
@@ -421,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38",
+   "id": "39",
    "metadata": {},
    "source": [
     "## Define the recharge"
@@ -443,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40",
+   "id": "41",
    "metadata": {},
    "source": [
     "## Define the evt"
@@ -478,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42",
+   "id": "43",
    "metadata": {},
    "source": [
     "## Define the river"
@@ -508,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46",
+   "id": "47",
    "metadata": {},
    "source": [
     "## Define the wells"
@@ -552,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51",
+   "id": "52",
    "metadata": {},
    "source": [
     "## Define the well for the prediction"
@@ -637,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +661,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53",
+   "id": "54",
    "metadata": {},
    "source": [
     "## Define the head observations"
@@ -660,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -762,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,7 +906,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71",
+   "id": "72",
    "metadata": {},
    "source": [
     "## Build the model"
@@ -905,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,17 +1004,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "npf = flopy.mf6.ModflowGwfnpf(gwf, save_specific_discharge=True, k=k11, k33=k33)"
+    "npf = flopy.mf6.ModflowGwfnpf(\n",
+    "    gwf, save_specific_discharge=True, k=k11, k33=k33, k33overk=True\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1035,7 +1047,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,7 +1090,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1095,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,7 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90",
+   "id": "91",
    "metadata": {},
    "source": [
     "## Plot the results\n",
@@ -1176,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1194,7 +1206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1212,7 +1224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,7 +1242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94",
+   "id": "95",
    "metadata": {},
    "source": [
     "### Simulated Heads and Drawdown"
@@ -1239,7 +1251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,7 +1260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96",
+   "id": "97",
    "metadata": {},
    "source": [
     "#### Calibration"
@@ -1257,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1267,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98",
+   "id": "99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1287,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,7 +1309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "100",
+   "id": "101",
    "metadata": {},
    "source": [
     "##### Calculate the residuals"
@@ -1306,7 +1318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101",
+   "id": "102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1316,7 +1328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "103",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1327,7 +1339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1348,7 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1358,7 +1370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106",
+   "id": "107",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1370,7 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107",
+   "id": "108",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1382,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108",
+   "id": "109",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1393,7 +1405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "109",
+   "id": "110",
    "metadata": {},
    "source": [
     "##### Plot the residuals"
@@ -1402,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110",
+   "id": "111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1415,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111",
+   "id": "112",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1425,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112",
+   "id": "113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1435,7 +1447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113",
+   "id": "114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,7 +1458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114",
+   "id": "115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1457,7 +1469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115",
+   "id": "116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1468,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116",
+   "id": "117",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1478,7 +1490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117",
+   "id": "118",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "118",
+   "id": "119",
    "metadata": {},
    "source": [
     "**NOTE:** There is spatial bias in the simulated results (*i.e.*, residuals are positive in the Northeast and negative in the Southwest)."
@@ -1536,7 +1548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "119",
+   "id": "120",
    "metadata": {},
    "source": [
     "#### Case A"
@@ -1545,7 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120",
+   "id": "121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1566,7 +1578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121",
+   "id": "122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122",
+   "id": "123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1601,7 +1613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "123",
+   "id": "124",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1611,7 +1623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "124",
+   "id": "125",
    "metadata": {},
    "source": [
     "#### Extra Run"
@@ -1620,7 +1632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "125",
+   "id": "126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "126",
+   "id": "127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1666,7 +1678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "127",
+   "id": "128",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1676,7 +1688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "128",
+   "id": "129",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1686,7 +1698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "129",
+   "id": "130",
    "metadata": {},
    "source": [
     "### Streamflow results"
@@ -1695,7 +1707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "130",
+   "id": "131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1710,7 +1722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "131",
+   "id": "132",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1735,7 +1747,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "132",
+   "id": "133",
    "metadata": {},
    "source": [
     "### Lake stage"
@@ -1744,7 +1756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "133",
+   "id": "134",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1754,7 +1766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "134",
+   "id": "135",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1765,7 +1777,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "135",
+   "id": "136",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1787,7 +1799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "136",
+   "id": "137",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1797,7 +1809,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "137",
+   "id": "138",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1829,7 +1841,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "138",
+   "id": "139",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1840,7 +1852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "139",
+   "id": "140",
    "metadata": {},
    "outputs": [],
    "source": []
