--- a/exercises/notebooks/SV_obsvals_weights_noise.ipynb
+++ b/exercises/notebooks/SV_obsvals_weights_noise.ipynb
@@ -262,7 +262,7 @@
     "    \"pest.pst\",\n",
     "    num_workers=10,\n",
     "    worker_root=\".\",\n",
-    "    master_dir=\"master_ies\",\n",
+    "    master_dir=\"master_ies_advanced\",\n",
     ")"
    ]
   },
