--- a/exercises/notebooks/SV_setup_control_file.ipynb
+++ b/exercises/notebooks/SV_setup_control_file.ipynb
@@ -25,8 +25,8 @@
    "source": [
     "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-annual\")\n",
     "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-working-monthly\")\n",
-    "safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-advanced-monthly\")\n",
-    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-advanced-annual\")\n",
+    "# safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-advanced-monthly\")\n",
+    "safe_org_d = os.path.join(\"..\", \"models\", \"synthetic-valley-advanced-annual\")\n",
     "assert os.path.exists(safe_org_d)"
    ]
   },
@@ -72,12 +72,7 @@
    "id": "5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import importlib\n",
-    "\n",
-    "importlib.reload(helpers)\n",
-    "helpers.process_csv_files(model_ws=tmp_d)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -105,6 +100,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import importlib\n",
+    "\n",
+    "importlib.reload(helpers)\n",
+    "helpers.process_csv_files(model_ws=pf.new_d)\n",
     "pf.add_py_function(\"helpers.py\", \"process_csv_files()\", is_pre_cmd=False)"
    ]
   },
@@ -679,14 +678,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyemu.os_utils.start_workers(\n",
-    "    pf.new_d,\n",
-    "    \"pestpp-ies\",\n",
-    "    \"pest.pst\",\n",
-    "    worker_root=\".\",\n",
-    "    num_workers=10,\n",
-    "    master_dir=\"master_prior_mc\",\n",
-    ")"
+    "# pyemu.os_utils.start_workers(\n",
+    "#     pf.new_d,\n",
+    "#     \"pestpp-ies\",\n",
+    "#     \"pest.pst\",\n",
+    "#     worker_root=\".\",\n",
+    "#     num_workers=10,\n",
+    "#     master_dir=\"master_prior_mc\",\n",
+    "# )"
    ]
   },
   {
