--- a/exercises/synthetic-valley/SV_flopy.ipynb
+++ b/exercises/synthetic-valley/SV_flopy.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_frequency = \"annual\"  # monthly or annual\n",
+    "sample_frequency = \"monthly\"  # monthly or annual\n",
     "useET = True"
    ]
   },
